<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/linear_back"
        android:padding="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="15dp">
        <TextView
            android:layout_margin="20dp"
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:text="@string/save_confirmation"
            android:layout_gravity="center">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/bt_back"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/no"
                >
            </Button>
            <View
                android:layout_width="300dp"
                android:layout_height="0dp">

            </View>
            <Button
                android:id="@+id/bt_save"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:text="@string/yes"
                >
            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>