<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="1000dp"
    android:layout_height="1400dp"
    tools:context=".CyroIntelligeetModeSetActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/newfrank_compressedlight"
        android:text="INTELLIGENT MODE"
        android:textColor="#04363D"
        android:textSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/bt_return"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:background="@drawable/bt_return_updown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016" />

<!--    <ImageView-->
<!--        android:id="@+id/iv_hand1"-->
<!--        android:layout_width="211dp"-->
<!--        android:layout_height="124dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:background="@drawable/a"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.2"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.18" />-->

<!--    <ImageView-->
<!--        android:id="@+id/iv_hand2"-->
<!--        android:layout_width="211dp"-->
<!--        android:layout_height="124dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:background="@drawable/d"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.81"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.179" />-->

<!--    <TextView-->
<!--        android:id="@+id/tv_hand1"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:gravity="center"-->
<!--        android:text="A1"-->
<!--        android:textColor="#02373B"-->
<!--        android:textSize="45dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.229"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.244" />-->

<!--    <TextView-->
<!--        android:id="@+id/tv_hand2"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="60dp"-->
<!--        android:gravity="center"-->
<!--        android:text="D1"-->
<!--        android:textColor="#02373B"-->
<!--        android:textSize="45dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.775"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.244" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fat_thickness"
        android:textColor="#04363D"
        android:textSize="45dp"
        android:fontFamily="@font/newfrank_compressedlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Refrigeration"
        android:textColor="#04363D"
        android:textSize="45dp"
        android:fontFamily="@font/newfrank_compressedlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:textColor="#04363D"
        android:textSize="45dp"
        android:fontFamily="@font/newfrank_compressedlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <CheckBox
        android:id="@+id/cb1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:button="@drawable/checkbox"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <CheckBox
        android:id="@+id/cb2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:button="@drawable/checkbox"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <CheckBox
        android:id="@+id/cb3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:button="@drawable/checkbox"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <CheckBox
        android:id="@+id/cb4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:button="@drawable/checkbox"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <CheckBox
        android:id="@+id/cb5"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:button="@drawable/checkbox"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804" />

    <TextView
        android:layout_width="840dp"
        android:layout_height="60dp"
        android:text="       &lt;20mm                                  0℃                     50min"
        android:textColor="#04363D"
        android:textSize="45dp"
        android:fontFamily="@font/newfrank_compressedlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282"
        tools:ignore="HardcodedText,SpUsage" />

    <TextView
        android:layout_width="840dp"
        android:layout_height="60dp"
        android:text="      20-30mm                              -3℃                    40min"
        android:textColor="#04363D"
        android:textSize="45dp"
        android:fontFamily="@font/newfrank_compressedlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417"
        tools:ignore="HardcodedText,SpUsage" />

    <TextView
        android:layout_width="840dp"
        android:layout_height="60dp"
        android:text="      30-50mm                              -5℃                    35min"
        android:textColor="#04363D"
        android:textSize="45dp"
        android:fontFamily="@font/newfrank_compressedlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        tools:ignore="HardcodedText,SpUsage" />

    <TextView
        android:layout_width="840dp"
        android:layout_height="60dp"
        android:text="      50-60mm                             -6℃                    35min"
        android:textColor="#04363D"
        android:textSize="45dp"
        android:fontFamily="@font/newfrank_compressedlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671"
        tools:ignore="HardcodedText,SpUsage" />

    <TextView
        android:layout_width="840dp"
        android:layout_height="60dp"
        android:text="        &gt;60mm                              -8℃                    30min"
        android:textColor="#04363D"
        android:textSize="45dp"
        android:fontFamily="@font/newfrank_compressedlight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.805"
        tools:ignore="HardcodedText,SpUsage" />

    <Button
        android:id="@+id/bt_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bt_ok_updown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />
</androidx.constraintlayout.widget.ConstraintLayout>